# smoucha

./: .gitignore  README.md
persona_finance/: README.md  pyproject.toml
persona_finance/src/persona_finance/: crew.py  main.py
